# websocket-chat

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TZ.md  docker.env  local.env  pyproject.toml  sample.env
.github/workflows/: checks.yaml
diagrams/: pipeline.puml  post_message.puml
docker-compose/: app.yaml  storages.yaml
sciarticle_task/: __init__.py  container.py  docker-entrypoint.sh
sciarticle_task/application/: __init__.py
sciarticle_task/application/api/: __init__.py  _container_setup.py  main.py
sciarticle_task/core/: __init__.py  _logging.py  _settings.py
sciarticle_task/domain/: __init__.py  _errors.py  constants.py  errors.py
sciarticle_task/domain/entities/: __init__.py  _base.py  _messages.py  _user.py  base.py  messages.py
sciarticle_task/domain/events/: __init__.py  _base.py  _messages.py
sciarticle_task/domain/value/: __init__.py  base.py  errors.py  messages.py
sciarticle_task/domain/values/: __init__.py  base.py  errors.py  messages.py
sciarticle_task/infra/: __init__.py
sciarticle_task/infra/brokers/: __init__.py  _app.py  _rabbitmq.py
sciarticle_task/infra/repositories/: __init__.py  errors.py
sciarticle_task/infra/websockets/: __init__.py  _base.py  _manager.py
sciarticle_task/logic/: __init__.py  errors.py  init.py  mediator.py
sciarticle_task/logic/commands/: __init__.py  mediator.py
sciarticle_task/logic/events/: mediator.py
sciarticle_task/logic/interactors/: __init__.py  _events.py  _messages.py
sciarticle_task/logic/mediator_pattern/: __init__.py  _entity.py  _errors.py  _handler.py  _logged_event_proxy.py  _mediator.py
tests/: test_entity.py  test_value.py
(+74 files in other folders)
